--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "",
 
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "request": "^2.67.0"
   },
 
   "devDependencies": {
