--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 
   "dependencies": {
     "express": "^4.13.3",
+    "jax.js": "^0.0.1",
     "node-schedule": "^0.6.0",
     "request": "^2.67.0"
   },
