--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
 
   "dependencies": {
-    "jax.js": "^0.0.1"
+    "jax.js": "^0.0.1",
+    "jump.js": "^0.3.1"
   },
 
   "devDependencies": {
